--- a/QLSL/Views/Report/Index.cshtml
+++ b/QLSL/Views/Report/Index.cshtml
@@ -5,10 +5,99 @@
 @section Scripts{
     <script src="~/Scripts/Chart.js"></script>
     <script src="~/Scripts/app/controllers/report/index.js"></script>
+    <script src="~/Scripts/app/controllers/report/utils.js"></script>
     <script>
         var report = new reportController();
         report.initialize();
     </script>
 }
-<h3>Dashboard</h3>
+<div class="clearfix"></div>
+<div class="row">
+    <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="x_panel">
+            <div class="x_title">
+                <h3>Report <small>Monthly</small></h3>
+                @*<ul class="nav navbar-right panel_toolbox">
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-wrench"></i></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>
+                                    <a href="#">Settings 1</a>
+                                </li>
+                                <li>
+                                    <a href="#">Settings 2</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                    </ul>*@
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content" >
+                <canvas id="mybarChart" style="height:400px"></canvas>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="clearfix"></div>
+    <div class="row">
+        <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="x_panel">
+                <div class="x_title">
+                    <h3>Xử <small>lý</small></h3>
+                    @*<ul class="nav navbar-right panel_toolbox">
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-wrench"></i></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>
+                                    <a href="#">Settings 1</a>
+                                </li>
+                                <li>
+                                    <a href="#">Settings 2</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                    </ul>*@
+                    <div class="clearfix"></div>
+                </div>
+
+                <div class="x_content">
+                    <canvas id="Doughnut" style="padding:5px"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="x_panel">
+                <div class="x_title">
+                    <h3>Lỗi <small>tồn tại</small></h3>
+                    @*<ul class="nav navbar-right panel_toolbox">
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-wrench"></i></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>
+                                    <a href="#">Settings 1</a>
+                                </li>
+                                <li>
+                                    <a href="#">Settings 2</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                    </ul>*@
+                    <div class="clearfix"></div>
+                </div>
+
+                <div class="x_content">
+                    <canvas id="polarArea" style="padding:5px"></canvas>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
