--- a/QLSL/Views/CCTV/Index.cshtml
+++ b/QLSL/Views/CCTV/Index.cshtml
@@ -84,9 +84,9 @@
                 Zone
             </th>
 
-            <th class="text-center">
+            @*<th class="text-center">
                 Map
-            </th>
+            </th>*@
             <th class="text-center">
                 Used
             </th>
@@ -138,12 +138,12 @@
                         }
                     }
                 </td>
-                <td class="text-center width-5">
+                @*<td class="text-center width-5">
                     @if (item.Map)
                     {
                         <i class="fa fa-check text-primary" aria-hidden="true"></i>
                     }
-                </td>
+                </td>*@
                 <td class="text-center width-5">
                     @if (!item.Disable)
                     {
@@ -151,7 +151,7 @@
                     }
                 </td>
 
-                <td class="text-center width-7">
+                <td class="text-center width-10">
                     @if (ViewContext.HttpContext.User.IsInRole("Admin"))
                     {
                         <a onclick="Edit(@item.CCTVID)" id="btnEdit_@item.CCTVID" class='btn btn-success btn-xs'>
@@ -161,6 +161,9 @@
                             <i class='glyphicon glyphicon-remove'></i>
                         </button>
                     }
+                    <a onclick="EditMain(@item.CCTVID)" id="btnEditMain_@item.CCTVID" class='btn btn-default btn-xs'>
+                        <i class='glyphicon glyphicon-edit'></i>
+                    </a>
                 </td>
             </tr>
         }
@@ -196,7 +199,6 @@
         <div class="pull-right">
             @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter, pageListSize = ViewBag.PageSize, allCCTV = ViewBag.AllCCTV }))
             Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount (@Model.TotalItemCount record)
-
         </div>
     </div>
 </div>
@@ -221,6 +223,22 @@
                                     backdrop: 'static',
                                     keyboard: false
                                 },
+                                'show');
+                        bindForm(this);
+                    });
+            return false;
+        };
+        var EditMain = function (ID) {
+            $.ajaxSetup({ cache: false });
+            var EditUrl = "/CCTV/EditMain/" + ID;
+            $("#MyModalContent")
+                .load(EditUrl,
+                    function () {
+                        $("#MyModal")
+                            .modal({
+                                backdrop: 'static',
+                                keyboard: false
+                            },
                                 'show');
                         bindForm(this);
                     });
