--- a/QLSL/Views/Report/Index.cshtml
+++ b/QLSL/Views/Report/Index.cshtml
@@ -4,6 +4,7 @@
 }
 @section Scripts{
     <script src="~/Scripts/Chart.js"></script>
+    <script src="~/Scripts/echarts.min.js"></script>
     <script src="~/Scripts/app/controllers/report/index.js"></script>
     <script src="~/Scripts/app/controllers/report/utils.js"></script>
     <script>
@@ -16,7 +17,32 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h3>Report <small>Monthly</small></h3>
+                <h3>Báo cáo</h3>
+                <div class="nav navbar-right panel_toolbox dropdown">
+                    <select class="form-control" id="YearReport">
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                    </select>
+                    </div>
+                
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+                <canvas id="mybarChart" style="height:400px"></canvas>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="clearfix"></div>
+<div class="row">
+    <div class="col-md-6 col-sm-6 col-xs-12">
+        <div class="x_panel">
+            <div class="x_title">
+                <h3>Tình trạng xử lý</h3>
                 @*<ul class="nav navbar-right panel_toolbox">
 
                         <li class="dropdown">
@@ -34,70 +60,56 @@
                     </ul>*@
                 <div class="clearfix"></div>
             </div>
-            <div class="x_content" >
-                <canvas id="mybarChart" style="height:400px"></canvas>
+
+            <div class="x_content">
+                <canvas id="Doughnut" style="padding:5px"></canvas>
             </div>
         </div>
     </div>
-    </div>
+    <div class="col-md-6 col-sm-6 col-xs-12">
+        <div class="x_panel">
+            <div class="x_title">
+                <h3>Tồn tại theo hệ thống @Html.ActionLink("Chi tiết", "ErrorDetails", "Report", null, new { @class = ""})</h3>
+                @*<ul class="nav navbar-right panel_toolbox">
 
-    <div class="clearfix"></div>
-    <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="x_panel">
-                <div class="x_title">
-                    <h3>Xử <small>lý</small></h3>
-                    @*<ul class="nav navbar-right panel_toolbox">
-
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-wrench"></i></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <a href="#">Settings 1</a>
-                                </li>
-                                <li>
-                                    <a href="#">Settings 2</a>
-                                </li>
-                            </ul>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-wrench"></i></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a href="#">Settings 1</a>
                         </li>
-
-                    </ul>*@
-                    <div class="clearfix"></div>
-                </div>
-
-                <div class="x_content">
-                    <canvas id="Doughnut" style="padding:5px"></canvas>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="x_panel">
-                <div class="x_title">
-                    <h3>Lỗi <small>tồn tại</small></h3>
-                    @*<ul class="nav navbar-right panel_toolbox">
-
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-wrench"></i></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <a href="#">Settings 1</a>
-                                </li>
-                                <li>
-                                    <a href="#">Settings 2</a>
-                                </li>
-                            </ul>
+                        <li>
+                            <a href="#">Settings 2</a>
                         </li>
+                    </ul>
+                </li>
 
-                    </ul>*@
-                    <div class="clearfix"></div>
-                </div>
+            </ul>*@
+                <div class="clearfix"></div>
+            </div>
 
-                <div class="x_content">
-                    <canvas id="polarArea" style="padding:5px"></canvas>
-                </div>
+            @*<div class="x_content">
+            <canvas id="polarArea" style="padding:5px"></canvas>
+        </div>*@
+            <div class="x_content">
+                <div id="echart_pie2" style="height:270px;padding:5px" ></div>
             </div>
         </div>
-
     </div>
 
-
+</div>
+@*<div class="clearfix"></div>
+<div class="row">
+    <div class="col-md-4 col-sm-4 col-xs-12">
+        <div class="x_panel">
+            <div class="x_title">
+                <h2>Pie Area</h2>
+                
+                <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+                <div id="echart_pie2" style="height:350px;"></div>
+            </div>
+        </div>
+    </div>
+</div>*@
