--- a/QLSL/Views/Shared/_Layout.cshtml
+++ b/QLSL/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("QLSL", "Index", "Home", new { area = "" }, new { @class = "navbar-brand color-head img-logo" })
+                @Html.ActionLink("QLSL", "Index", "Report", new { area = "" }, new { @class = "navbar-brand color-head img-logo" })
             </div>
             <div class="navbar-collapse collapse">
                 @if (Request.IsAuthenticated)
